# async-srt-rs

./: Cargo.toml
srt-sys/: Cargo.toml  build.rs
srt-sys/data/: include.h
srt-sys/examples/: client.rs  server.rs
srt-sys/src/: lib.rs
